@@ -16,10 +16,11 @@ c = BuildmasterConfig = {}
 
 ####### BUILDSLAVES
 
-# the 'bots' list defines the set of allowable buildslaves. Each element is a
-# tuple of bot-name and bot-password. These correspond to values given to the
-# buildslave's mktap invocation.
-c['bots'] = [("bot1name", "bot1passwd")]
+# the 'slaves' list defines the set of allowable buildslaves. Each element is
+# a tuple of bot-name and bot-password. These correspond to values given to
+# the buildslave's mktap invocation.
+from buildbot.slave import BuildSlave
+c['slaves'] = [BuildSlave("bot1name", "bot1passwd")]
 
 
 # 'slavePortnum' defines the TCP port to listen on. This must match the value
