@@ -135,10 +135,11 @@ class Interpolate(unittest.TestCase):
 run_config = """
 from buildbot.process import factory
 from buildbot.steps.shell import ShellCommand, WithProperties
+from buildbot.slave import BuildSlave
 s = factory.s
 
 BuildmasterConfig = c = {}
-c['bots'] = [('bot1', 'sekrit')]
+c['slaves'] = [BuildSlave('bot1', 'sekrit')]
 c['sources'] = []
 c['schedulers'] = []
 c['slavePortnum'] = 0
