@@ -13,10 +13,12 @@ from buildbot.slave import bot
 config_1 = """
 from buildbot.process import factory
 from buildbot.steps import dummy
+from buildbot.slave import BuildSlave
 s = factory.s
 
 BuildmasterConfig = c = {}
-c['bots'] = [('bot1', 'sekrit'), ('bot2', 'sekrit'), ('bot3', 'sekrit')]
+c['slaves'] = [BuildSlave('bot1', 'sekrit'), BuildSlave('bot2', 'sekrit'),
+               BuildSlave('bot3', 'sekrit')]
 c['sources'] = []
 c['schedulers'] = []
 c['slavePortnum'] = 0
@@ -190,10 +192,11 @@ class Slave(RunMixin, unittest.TestCase):
 config_3 = """
 from buildbot.process import factory
 from buildbot.steps import dummy
+from buildbot.slave import BuildSlave
 s = factory.s
 
 BuildmasterConfig = c = {}
-c['bots'] = [('bot1', 'sekrit')]
+c['slaves'] = [BuildSlave('bot1', 'sekrit')]
 c['sources'] = []
 c['schedulers'] = []
 c['slavePortnum'] = 0
